# src/routes/cart.route.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import { authenticateToken } from '../middlewares/auth.middleware.js'; 
-import { addItemToCart, checkout, getCart, removeCartItem, updateCartItemQuantity } from '../controllers/cart.controller.js'; 
+import { addItemToCart, buyNowCheckout, checkout, getCart, removeCartItem, updateCartItemQuantity } from '../controllers/cart.controller.js'; 
 
 const cartRouter = express.Router();
 
@@ -14,5 +14,7 @@ cartRouter.patch('/items/:id', authenticateToken, updateCartItemQuantity);
 cartRouter.delete('/items/:id', authenticateToken, removeCartItem);
 
 cartRouter.post('/checkout', authenticateToken, checkout);
+
+cartRouter.post('/checkout/direct', authenticateToken, buyNowCheckout);
 
 export { cartRouter };
